--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                <button class="button" onclick="clickbutton(this)">9</button>
            </td>
            <td class="dentaku_b">
-               <button class="button" onclick="clickbutton(this)">+</button>
+               <button class="button" onclick="opebutton(this)">+</button>
            </td>
          </tr>
          <tr>
@@ -38,7 +38,7 @@
                <button class="button" onclick="clickbutton(this)">6</button>
            </td>
            <td class="dentaku_b">
-               <button class="button" onclick="clickbutton(this)">-</button>
+               <button class="button" onclick="opebutton(this)">-</button>
            </td>
          </tr>
          <tr>
@@ -52,7 +52,7 @@
                <button class="button" onclick="clickbutton(this)">3</button>
            </td>
            <td class="dentaku_b">
-               <button class="button" onclick="clickbutton(this)">*</button>
+               <button class="button" onclick="opebutton(this)">*</button>
            </td>
          </tr>
          <tr>
@@ -66,7 +66,7 @@
                <button class="button" onclick="clickbutton(this)">.</button>
            </td>
            <td class="dentaku_b">
-               <button class="button" onclick="clickbutton(this)">/</button>
+               <button class="button" onclick="opebutton(this)">/</button>
            </td>
          </tr>
          <tr>
